--- a/spotizer/templates/spotizer/albums.html
+++ b/spotizer/templates/spotizer/albums.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +9,8 @@
     <title>SPOTIZER</title>
 
     <!-- Bootstrap -->
-    <link href="/static/spotizer/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="{% static "spotizer/css/bootstrap.min.css" %}" rel="stylesheet">
+      <link href="/static/spotizer/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,7 +18,11 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <body>
-    <h1>{{artiste.nom|capfirst}}</h1>
+    <div class="container">
+        <div class="row"></div>
+        <div class="col-lg-4"><img src="/{{artiste.image}}"/> </div>
+        <div class="col-lg-8"><h1>{{artiste.nom|capfirst}}</h1></div>
+
     <ul>
     {% for album in mesalbums %}
         <li>
@@ -28,7 +33,7 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/static/spotizer/js/bootstrap.min.js"></script>
   </body>
 </html>
 
