--- a/spotizer/templates/spotizer/morceaux.html
+++ b/spotizer/templates/spotizer/morceaux.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="/static/spotizer/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="static/spotizer/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,13 +17,27 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <body>
-        <h1>{{album.nom|capfirst}}</h1>
+  <h1>{{Album.nom}}</h1>
+   <div class="container">
+       <header class="page-header">
+
+        <h1>{{artiste.nom|capfirst}}</h1>
+        <div class="row">
+            <img src="/{{artiste.image}}">
+        </div>
+            <div class="col-lg-4"> {{artiste.nom|capfirst}}</div>
+
+
+
+
 
     <ul>
     {% for morceaux in mesmorceaux %}
         <li> {{morceaux.nom}} <audio src="/{{morceaux.file}}" controls >coucou </audio> </li>
     {% endfor %}
 </ul>
+            </div>
+    </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
